CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
PROJECT(PRISM)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")

SET(MBEDTLS_DIR     ${CMAKE_CURRENT_SOURCE_DIR}/ext/mbedtls-flat)
SET(LIBUV_DIR       ${CMAKE_CURRENT_SOURCE_DIR}/ext/libuv)
SET(SS_DIR          ${CMAKE_CURRENT_SOURCE_DIR}/ext/shadowsocks-crypto)
SET(PRISMUI_DIR     ${CMAKE_CURRENT_SOURCE_DIR}/prism)

# 设置头文件包含目录
SET(LUMINOUS_ADDTION_HDR
        ${LIBUV_DIR}/include
        ${MBEDTLS_DIR}/include
        )
INCLUDE_DIRECTORIES(${LUMINOUS_ADDTION_HDR})

SET(ENABLE_TESTING OFF CACHE BOOL "" FORCE)
SET(ENABLE_PROGRAMS OFF CACHE BOOL "" FORCE)
SET(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
SET(BUILD_UNITTEST OFF CACHE BOOL "" FORCE)
SET(LIBUV_BUILD_TESTS OFF CACHE BOOL "" FORCE)

ADD_DEFINITIONS(-D MBEDTLS_ALLOW_PRIVATE_ACCESS)

ADD_SUBDIRECTORY(${LIBUV_DIR})
ADD_SUBDIRECTORY(${MBEDTLS_DIR})
ADD_SUBDIRECTORY(${SS_DIR})
ADD_SUBDIRECTORY(${PRISMUI_DIR})
